----------------------------------------------------------------------
 OmegaT 6.0.1 (2024-08-17)
----------------------------------------------------------------------
  0 Enhancement
 14 Bug fixes
  8 Localisation updates
----------------------------------------------------------------------
6.0.1 vs 6.0.0

  Bug fixes:

  - sdlxliff filter does not display (some) comments
  https://sourceforge.net/p/omegat/bugs/1244/

  - Windows launcher does not launch when without_JRE installer used
  https://sourceforge.net/p/omegat/bugs/1240/

  - Match statistics are affected by fuzzy match threshold
  https://sourceforge.net/p/omegat/bugs/1236/

  - Repository mapping with SVN cause error
  https://sourceforge.net/p/omegat/bugs/1232/

  - List of issues stays hidden in the background
  https://sourceforge.net/p/omegat/bugs/1225/

  - Selection of match for pre-translation varies through different OS's
  https://sourceforge.net/p/omegat/bugs/1213/

  - Critical errors are logged, but no longer shown to the user
  https://sourceforge.net/p/omegat/bugs/1207/

  - Google2 MT connector failed to parse response
  https://sourceforge.net/p/omegat/bugs/1206/

  - Old icons still visible in Windows build
  https://sourceforge.net/p/omegat/bugs/1195/

  - Regular expression for custom tags
  https://sourceforge.net/p/omegat/bugs/1193/

  - Content of notes elements are not displayed correctly with Xliff filter
  https://sourceforge.net/p/omegat/bugs/1192/

  - Dictionary displays apostrophe as html entity code
  https://sourceforge.net/p/omegat/bugs/1181/

  - Error when trying to backup the project file on Windows
  https://sourceforge.net/p/omegat/bugs/1166/

  - Backup file does not created in no-team project
  https://sourceforge.net/p/omegat/bugs/1159/

  Localization Updates:

  - Catalan localization updated (UI, readme, documentation)
  - Chinese localization updated (UI, readme, scripts)
  - Corsican localization updated (UI, readme)