@@ -142,20 +142,6 @@ public final class MainWindowMenuHandler {
     }
 
     /**
-     * Open MED project.
-     */
-    public void projectMedOpenMenuItemActionPerformed() {
-        ProjectUICommands.projectOpenMED();
-    }
-
-    /**
-     * Create MED project.
-     */
-    public void projectMedCreateMenuItemActionPerformed() {
-        ProjectUICommands.projectCreateMED();
-    }
-
-    /**
      * Imports the file/files/folder into project's source files.
      */
     public void projectImportMenuItemActionPerformed() {
